[package]
name = "crypto-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
dotenvy = "0.15.1"
base64 = "0.22.1"
tokio = { version = "1.33", features = ["full"] }
uuid = { version = "1.3", features = ["v4","serde"] }
hmac = "0.12.1"
sha2 = "0.10"